[package]
name = "pconvert-rust"
version = "0.1.8"
authors = ["Platforme International"]
license = "Apache-2.0"
repository = "https://github.com/ripe-tech/pconvert-rust"
edition = "2018"

[lib]
name = "pconvert_rust"
crate-type = ["rlib", "cdylib"]

[dependencies]
image = "0.23.9"
mtpng = "0.3.4"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[build-dependencies]
chrono = "0.4.13"
regex = "1"

[profile.dev]
opt-level = 3
