[package]
name = "pconvert-rust"
description = "Rust version of P(NG)Convert, a simple PNG conversion tool."
version = "0.1.8"
authors = ["Platforme International"]
license = "Apache-2.0"
repository = "https://github.com/ripe-tech/pconvert-rust"
edition = "2018"
build = "build.rs"

[lib]
name = "pconvert_rust"
crate-type = ["rlib", "cdylib"]

[dependencies]
image = { version = "0.23.9", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features =  ["File", "ImageData"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.12", features = ["extension-module"]}
mtpng = "0.3.4"

[build-dependencies]
chrono = "0.4.13"
regex = "1"
image = { version = "0.23.9", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
